--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@
 
 name: Java CI with Gradle
 
+#Events that trigger the workflow, in this case, a push or pull request to the master branch
 on:
   push:
     branches: [ master ]
@@ -18,11 +19,12 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up JDK 1.8
+    # Uses attribute for the action to use.
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-
     - name: Grant execute permission for gradlew
+    # Command to run . attribute for this is run.
       run: chmod +x gradlew
 
     - name: Build with Gradle
