--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
-        image: namrarasheed154/python-app:app-1.0
+        image: namrarasheed154/python-app
         registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.Docker_Username }}
+        password: ${{ secrets.Docker_Password }}
          
