--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,5 +36,5 @@ jobs:
         image: namrarasheed154/python-app
         registry: docker.io
         username: ${{ secrets.Docker_Username }}
-        password: ${{ secrets.Docker_Password }}
+        password: ${{ secrets.Docker_Pass }}
          
