--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,6 +29,8 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build
+    - name: List build artifacts
+      run: ls -l build/libs/
 
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
@@ -37,4 +39,6 @@ jobs:
         registry: docker.io
         username: ${{ secrets.Docker_Username }}
         password: ${{ secrets.Docker_Pass }}
+        context: .
+        file: ./Dockerfile
          
