Update gradle.yml to remove Java CI workflow
Removed Java CI workflow and added Dockerfile path.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,47 +39,5 @@ jobs:
         registry: docker.io
         username: ${{ secrets.Docker_Username }}
         password: ${{ secrets.Docker_Pass }}
-        # This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
-name: Java CI with Gradle
-
-#Events that trigger the workflow, in this case, a push or pull request to the master branch
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-jobs:
-  build-java:
-
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up JDK 1.8
-    # Uses attribute for the action to use.
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Grant execute permission for gradlew
-    # Command to run . attribute for this is run.
-      run: chmod +x gradlew
-
-    - name: Build with Gradle
-      run: ./gradlew build
-    - name: List build artifacts
-      run: ls -l build/libs/
-
-    - name: Build and Push Docker Image
-      uses: mr-smithers-excellent/docker-build-push@v4
-      with:
-        image: namrarasheed154/python-app
-        registry: docker.io
-        username: ${{ secrets.Docker_Username }}
-        password: ${{ secrets.Docker_Pass }}
         directory: .
-         
-         
+        dockerfile: src/Dockerfile
