--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,4 +40,4 @@ jobs:
         username: ${{ secrets.Docker_Username }}
         password: ${{ secrets.Docker_Pass }}
         directory: .
-        dockerfile: src/Dockerfile
+        dockerfile: Dockerfile
