--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,13 +16,13 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v6
 
     - name: Set up JDK 1.8
     # Uses attribute for the action to use.
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v5
       with:
-        java-version: 1.8
+        java-version: '21'
     - name: Grant execute permission for gradlew
     # Command to run . attribute for this is run.
       run: chmod +x gradlew
@@ -33,15 +33,15 @@ jobs:
       run: ls -l build/libs/
 
     - name: Build and Push Docker Image
-      uses: mr-smithers-excellent/docker-build-push@v4
+      uses: docker/build-push-action@v6
       with:
-        image: namrarasheed154/python-app
+        image: namrarasheed154/java-app
         registry: docker.io
         username: ${{ secrets.Docker_Username }}
         password: ${{ secrets.Docker_Pass }}
         directory: .
         dockerfile: Dockerfile
-
+        tags: $Docker_Username/java-app:1.0
   
 
 
