--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,6 +23,7 @@ jobs:
       uses: actions/setup-java@v5
       with:
         java-version: '21'
+        distibution: 'temurin'
     - name: Grant execute permission for gradlew
     # Command to run . attribute for this is run.
       run: chmod +x gradlew
