--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,10 +20,10 @@ jobs:
 
     - name: Set up JDK 1.8
     # Uses attribute for the action to use.
-      uses: actions/setup-java@v5
+       
+      uses: actions/setup-java@v1
       with:
-        java-version: '21'
-        distribution: 'temurin'
+        java-version: 1.8
     - name: Grant execute permission for gradlew
     # Command to run . attribute for this is run.
       run: chmod +x gradlew
