--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,8 +42,8 @@ jobs:
         password: ${{ secrets.Docker_Pass }}
         directory: .
         dockerfile: Dockerfile
-        tag: 1.1
-  
+        tags: 1.1,latest
+        push: true
 
 
      
