--- a/.github/workflows/deploy_to_k8s.yml
+++ b/.github/workflows/deploy_to_k8s.yml
@@ -22,8 +22,8 @@ jobs:
         push: true
 
     - name: Deploy to k8s
-      uses: appleboy/kubectl-action@v1.0.0
+      uses: actions-hub/kubectl@master
+      env:
+       KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
       with:
-        args: apply -f deployment.yaml
-        env:
-        KUBECONFIG: ${{ env.KUBE_CONFIG }}
+       args: apply -f deployment.yml
