--- a/.github/workflows/deploy_to_k8s.yml
+++ b/.github/workflows/deploy_to_k8s.yml
@@ -12,19 +12,43 @@ jobs:
   deploy:
     runs-on: self-hosted
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      # Checkout code
+      - name: Checkout code
+        uses: actions/checkout@v6
 
-    - name: Create Docker Image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: 1.0
+      # Set up JDK 1.8
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
 
-    - name: Deploy to k8s
-      uses: actions-hub/kubectl@master
-      env:
-       KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
-      with:
-       args: apply -f deployment.yml
+      # Grant execute permission for Gradle wrapper
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      # Build project with Gradle
+      - name: Build with Gradle
+        run: ./gradlew build
+
+      # List build artifacts
+      - name: List build artifacts
+        run: ls -l build/libs/
+
+      # Build and push Docker image
+      - name: Build and Push Docker Image
+        uses: mr-smithers-excellent/docker-build-push@v4
+        with:
+          image: namrarasheed154/java-app:1.0
+          registry: docker.io
+          username: ${{ secrets.Docker_Username }}
+          password: ${{ secrets.Docker_Pass }}
+          directory: .
+          dockerfile: Dockerfile
+
+      # Deploy to Kubernetes
+      - name: Deploy to k8s
+        uses: actions-hub/kubectl@master
+        env:
+          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+        with:
+          args: apply -f deployment.yml
