--- a/.github/workflows/deploy_to_k8s.yml
+++ b/.github/workflows/deploy_to_k8s.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Build and Push Docker Image
         uses: mr-smithers-excellent/docker-build-push@v4
         with:
-          image: namrarasheed154/java-app:1.0
+          image: namrarasheed154/java-app:1.0-${{ github.sha }}
           registry: docker.io
           username: ${{ secrets.Docker_Username }}
           password: ${{ secrets.Docker_Pass }}
