--- a/.github/workflows/deploy_to_k8s.yml
+++ b/.github/workflows/deploy_to_k8s.yml
@@ -47,8 +47,7 @@ jobs:
 
       # Deploy to Kubernetes
       - name: Deploy to k8s
-        uses: actions-hub/kubectl@master
-        env:
-          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
-        with:
-          args: apply -f deployment.yml
+        run: |
+          echo "$KUBE_CONFIG" | base64 --decode > kubeconfig
+          kubectl --kubeconfig=kubeconfig apply -f deployment.yml
+      
