--- a/.github/workflows/deploy_to_k8s.yml
+++ b/.github/workflows/deploy_to_k8s.yml
@@ -45,9 +45,15 @@ jobs:
           directory: .
           dockerfile: Dockerfile
 
+      - name: Configure kubeconfig
+      run: |
+        mkdir -p /home/gh-runner/.kube
+        echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode > /home/gh-runner/.kube/config
+        chmod 600 /home/gh-runner/.kube/config
+
       # Deploy to Kubernetes
       - name: Deploy to k8s
         run: |
           
-          kubectl --kubeconfig=/home/gh-runner/.kube/config apply -f deployment.yml
+          kubectl apply -f deployment.yml
       
