--- a/.github/workflows/deploy_to_k8s.yml
+++ b/.github/workflows/deploy_to_k8s.yml
@@ -5,22 +5,21 @@ on:
     branches:
       - master
 
-env:
-  KUBECONFIG: ${{ secrets.KUBE_CONFIG }}
-
 jobs:
   deploy:
     runs-on: self-hosted
+
     steps:
       # Checkout code
       - name: Checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
 
-      # Set up JDK 1.8
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      # Set up JDK 8
+      - name: Set up JDK 8
+        uses: actions/setup-java@v4
         with:
-          java-version: 1.8
+          distribution: temurin
+          java-version: '8'
 
       # Grant execute permission for Gradle wrapper
       - name: Grant execute permission for gradlew
@@ -44,16 +43,17 @@ jobs:
           password: ${{ secrets.Docker_Pass }}
           directory: .
           dockerfile: Dockerfile
+          tags: latest
 
+      # Configure kubeconfig (only needed if not already present on runner)
       - name: Configure kubeconfig
-      run: |
-        mkdir -p /home/gh-runner/.kube
-        echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode > /home/gh-runner/.kube/config
-        chmod 600 /home/gh-runner/.kube/config
+        run: |
+          mkdir -p /home/gh-runner/.kube
+          echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode > /home/gh-runner/.kube/config
+          chmod 600 /home/gh-runner/.kube/config
 
       # Deploy to Kubernetes
       - name: Deploy to k8s
-        run: |
-          
-          kubectl apply -f deployment.yml
+        run: kubectl apply -f deployment.yml
+
       
