--- a/.github/workflows/deploy_to_k8s.yml
+++ b/.github/workflows/deploy_to_k8s.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+# If the image is used in the deployment manifest
       # Set up JDK 8
       - name: Set up JDK 8
         uses: actions/setup-java@v4
