--- a/.github/workflows/deploy_to_k8s.yml
+++ b/.github/workflows/deploy_to_k8s.yml
@@ -49,6 +49,9 @@ jobs:
 
       # Deploy to Kubernetes
       - name: Deploy to k8s
-        run: kubectl apply -f deployment.yml
+        run: |
+         kubectl delete deployment nginx-deployment
+         kubectl apply -f deployment.yml
+         kubectl get pods | grep nginx
 
       
