--- a/.github/workflows/deploy_to_k8s.yml
+++ b/.github/workflows/deploy_to_k8s.yml
@@ -52,6 +52,7 @@ jobs:
         run: |
          kubectl delete deployment nginx-deployment
          kubectl apply -f deployment.yml
+         kubectl rollout status deployment/nginx-deployment
          kubectl get pods | grep nginx
 
       
