--- a/.github/workflows/deploy_to_k8s.yml
+++ b/.github/workflows/deploy_to_k8s.yml
@@ -12,14 +12,18 @@ jobs:
     steps:
       # Checkout code
       - name: Checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
 
-      # Set up Java (if needed)
+      # Set up Java
       - name: Set up JDK 8
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '8'
+
+      # Make gradlew executable
+      - name: Grant execute permission
+        run: chmod +x gradlew
 
       # Build project
       - name: Build with Gradle
@@ -30,35 +34,31 @@ jobs:
         run: |
           mkdir -p $HOME/.kube
           cat <<EOF > $HOME/.kube/config
-          apiVersion: v1
-          kind: Config
-          clusters:
-          - cluster:
-              certificate-authority-data: ${{ secrets.KUBE_CA }}
-              server: ${{ secrets.KUBE_URL }}
-            name: github-actions-cluster
-          contexts:
-          - context:
-              cluster: github-actions-cluster
-              user: gha-deployer
-            name: gha-context
-          current-context: gha-context
-          users:
-          - name: gha-deployer
-            user:
-              token: ${{ secrets.KUBE_TOKEN }}
-          EOF
+apiVersion: v1
+kind: Config
+clusters:
+- name: cluster
+  cluster:
+    certificate-authority-data: ${{ secrets.K8S_CA }}
+    server: ${{ secrets.K8S_SERVER }}
+contexts:
+- name: context
+  context:
+    cluster: cluster
+    user: gha-user
+    namespace: github-actions
+current-context: context
+users:
+- name: gha-user
+  user:
+    token: ${{ secrets.K8S_TOKEN }}
+EOF
           chmod 600 $HOME/.kube/config
-
-      
-
 
       # Deploy to Kubernetes
       - name: Deploy to k8s
         run: |
-         kubectl delete deployment nginx-deployment
-         kubectl apply -f deployment.yml
-         kubectl rollout status deployment/nginx-deployment
-         kubectl get pods | grep nginx
-
-      
+          kubectl delete deployment nginx-deployment --ignore-not-found=true
+          kubectl apply -f deployment.yml
+          kubectl rollout status deployment/nginx-deployment
+          kubectl get pods | grep nginx
