--- a/.github/workflows/deploy_to_k8s.yml
+++ b/.github/workflows/deploy_to_k8s.yml
@@ -24,31 +24,32 @@ jobs:
       # Build project
       - name: Build with Gradle
         run: ./gradlew build
-
-      # Configure kubeconfig dynamically
+# 5️⃣ Configure kubeconfig dynamically
       - name: Configure kubeconfig
         run: |
-          mkdir -p $HOME/.kube
-          cat <<EOF > $HOME/.kube/config
-          apiVersion: v1
-          kind: Config
-          clusters:
-          - cluster:
-              certificate-authority-data: ${{ secrets.KUBE_CA }}
-              server: ${{ secrets.KUBE_URL }}
-            name: github-actions-cluster
-          contexts:
-          - context:
-              cluster: github-actions-cluster
-              user: gha-deployer
-            name: gha-context
-          current-context: gha-context
-          users:
-          - name: gha-deployer
-            user:
-              token: ${{ secrets.KUBE_TOKEN }}
-          EOF
-          chmod 600 $HOME/.kube/config
+         mkdir -p $HOME/.kube
+         cat <<EOF > $HOME/.kube/config
+apiVersion: v1
+kind: Config
+clusters:
+- name: cluster
+  cluster:
+    certificate-authority-data: ${{ secrets.KUBE_CA }}
+    server: ${{ secrets.KUBE_URL }}
+contexts:
+- name: context
+  context:
+    cluster: cluster
+    user: gha-user
+    namespace: github-actions
+current-context: context
+users:
+- name: gha-user
+  user:
+    token: ${{ secrets.KUBE_TOKEN }}
+EOF
+    chmod 600 $HOME/.kube/config
+
 
       # Deploy to Kubernetes
       - name: Deploy to k8s
