--- a/.github/workflows/deploy_to_k8s.yaml
+++ b/.github/workflows/deploy_to_k8s.yaml
@@ -7,26 +7,18 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # GitHub-hosted runner
+    runs-on: self-hosted  # GitHub-hosted runner
 
     steps:
     
-      # Configure kubeconfig on the runner
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v4
-
-      - name: Configure kubeconfig
-        run: |
-          echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > kubeconfig.yaml
-          export KUBECONFIG=$PWD/kubeconfig.yaml
-          kubectl get nodes
+     
         
 
       # Deploy to Kubernetes
       - name: Deploy to k8s
         run: |
       
-         export KUBECONFIG=$PWD/kubeconfig.yaml
+         export KUBECONFIG=/home/runner/kube/kubeconfig-minimal.yaml
          kubectl delete deployment nginx-deployment
          kubectl apply -f deployment.yml
          kubectl rollout status deployment/nginx-deployment
