--- a/.github/workflows/deploy_to_k8s.yaml
+++ b/.github/workflows/deploy_to_k8s.yaml
@@ -23,7 +23,7 @@ jobs:
            export KUBECONFIG=/home/gh-runner/.kube/minimal-kubeconf.yaml
 
 
-           
+           kubectl delete deployment/nginx-deployment
            kubectl apply -f deployment.yml
            kubectl rollout status deployment/nginx-deployment
            kubectl get pods | grep nginx
