--- a/.github/workflows/deploy_to_k8s.yaml
+++ b/.github/workflows/deploy_to_k8s.yaml
@@ -5,24 +5,23 @@ on:
     branches:
       - master
 
-env:
-  KUBECONFIG: ${{ secrets.KUBE_CONFIG }}
 jobs:
   deploy:
-    runs-on: self-hosted  # Self-hosted runner
+    runs-on: self-hosted
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Create temp kubeconfig
+      - name: Create temporary kubeconfig
         run: |
           mkdir -p $GITHUB_WORKSPACE/kube
-          echo "${{ secrets.KUBECONFIG }}" | base64 -d > $GITHUB_WORKSPACE/kube/config
-     
-        
+          echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > $GITHUB_WORKSPACE/kube/config
+          chmod 600 $GITHUB_WORKSPACE/kube/config
 
-      # Deploy to Kubernetes
-      - name: Deploy to k8s
+      - name: Deploy to Kubernetes
         run: |
-           kubectl apply -f deployment.yml
-           kubectl rollout status deployment/nginx-deployment
-           kubectl get pods | grep nginx
+          export KUBECONFIG=$GITHUB_WORKSPACE/kube/config
+          kubectl apply -f deployment.yml
+          kubectl rollout status deployment/nginx-deployment
+          kubectl get pods | grep nginx
