--- a/.github/workflows/deploy_to_k8s.yaml
+++ b/.github/workflows/deploy_to_k8s.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: Deploy to Kubernetes
         run: |
           export KUBECONFIG=$GITHUB_WORKSPACE/kube/config
+          kubectl delete deployment/nginx-deployment
           kubectl apply -f deployment.yml
           kubectl rollout status deployment/nginx-deployment
           kubectl get pods | grep nginx
