--- a/.github/workflows/deploy_to_k8s.yaml
+++ b/.github/workflows/deploy_to_k8s.yaml
@@ -11,18 +11,37 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Create temporary kubeconfig
+      - name: Create kubeconfig dynamically
         run: |
-          mkdir -p $GITHUB_WORKSPACE/kube
-          echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > $GITHUB_WORKSPACE/kube/config
-          chmod 600 $GITHUB_WORKSPACE/kube/config
+          mkdir -p $HOME/.kube
+          
+          cat <<EOF > $HOME/.kube/config
+          apiVersion: v1
+          kind: Config
+          clusters:
+          - name: cluster
+            cluster:
+              server: ${{ secrets.K8S_SERVER }}
+              certificate-authority-data: ${{ secrets.K8S_CA_DATA }}
+          contexts:
+          - name: context
+            context:
+              cluster: cluster
+              user: gh-runner
+              namespace: runner-ns
+          current-context: context
+          users:
+          - name: gh-runner
+            user:
+              client-certificate-data: ${{ secrets.K8S_CLIENT_CERT }}
+              client-key-data: ${{ secrets.K8S_CLIENT_KEY }}
+          EOF
 
-      - name: Deploy to Kubernetes
+      - name: Deploy
         run: |
-          export KUBECONFIG=$GITHUB_WORKSPACE/kube/config
-          kubectl delete deployment/nginx-deployment
-          kubectl apply -f deployment.yml
+          kubectl delete deployment nginx-deployment --ignore-not-found
+          kubectl apply -f deployment.yml 
           kubectl rollout status deployment/nginx-deployment
-          kubectl get pods | grep nginx
+          kubectl get pods -n runner-ns
