--- a/.github/workflows/deploy_to_k8s.yaml
+++ b/.github/workflows/deploy_to_k8s.yaml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Deploy
         run: |
-          yamllint ~/home/gh-runner/.kube/config
+          sed -n '15,25p' /home/gh-runner/.kube/config
           kubectl delete deployment nginx-deployment --ignore-not-found
           kubectl apply -f deployment.yml 
           kubectl rollout status deployment/nginx-deployment
